--- a/QuanLyTour/appsettings.json
+++ b/QuanLyTour/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=BAOCODER\\MSSQLSERVER01;Initial Catalog=QuanLyTour;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=LAPTOP-OPH0QRQR\\SQLEXPRESS;Initial Catalog=QuanLyTour;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
   }
 }
