--- a/QuanLyTour/QuanLyTour.csproj
+++ b/QuanLyTour/QuanLyTour.csproj
@@ -7,15 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\Home\Tour\**" />
+    <Content Remove="Views\Home\Tour\**" />
+    <EmbeddedResource Remove="Views\Home\Tour\**" />
+    <None Remove="Views\Home\Tour\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
     <PackageReference Include="PagedList.Mvc" Version="4.5.0" />
     <PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
     <PackageReference Include="X.PagedList.Mvc.Core" Version="10.5.7" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Views\Home\Tour\" />
   </ItemGroup>
 
 </Project>
