--- a/QuanLyTour/appsettings.json
+++ b/QuanLyTour/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=BAOCODER\\MSSQLSERVER01;Initial Catalog=QuanLyTour;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
-  }
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=LAPTOP_1106\\SQLEXPRESS;Initial Catalog=QuanLyTour;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+    }
 }
